chore(engine): Reduce complexity of restoreProcessInstance of ExecutionEntity