@@ -164,8 +164,8 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   protected int cachedEntityState;
 
   @SuppressWarnings("unchecked")
-  protected transient VariableStore<VariableInstanceEntity> variableStore = new VariableStore<>(this,
-      new ExecutionEntityReferencer(this));
+  protected transient VariableStore<VariableInstanceEntity> variableStore =
+    new VariableStore<>(this, new ExecutionEntityReferencer(this));
 
   // replaced by //////////////////////////////////////////////////////////////
 
@@ -284,8 +284,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
       createdExecution.setTenantId(tenantId);
     }
 
-    // with the fix of CAM-9249 we presume that the parent and the child have
-    // the same startContext
+    // with the fix of CAM-9249 we presume that the parent and the child have the same startContext
     createdExecution.setStartContext(scopeInstantiationContext);
 
     createdExecution.skipCustomListeners = this.skipCustomListeners;
@@ -300,8 +299,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   // /////////////////////////////////////////////////////////////
 
   @Override
-  public ExecutionEntity createSubProcessInstance(PvmProcessDefinition processDefinition, String businessKey,
-      String caseInstanceId) {
+  public ExecutionEntity createSubProcessInstance(PvmProcessDefinition processDefinition, String businessKey, String caseInstanceId) {
     shouldQueryForSubprocessInstance = true;
 
     ExecutionEntity subProcess = (ExecutionEntity) super.createSubProcessInstance(processDefinition, businessKey,
@@ -312,8 +310,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     if (tenantId != null) {
       subProcess.setTenantId(tenantId);
     } else {
-      // if process definition has no tenant id, inherit this process instance's
-      // tenant id
+      // if process definition has no tenant id, inherit this process instance's tenant id
       subProcess.setTenantId(this.tenantId);
     }
 
@@ -351,8 +348,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     if (tenantId != null) {
       subCase.setTenantId(tenantId);
     } else {
-      // if case definition has no tenant id, inherit this process instance's
-      // tenant id
+      // if case definition has no tenant id, inherit this process instance's tenant id
       subCase.setTenantId(this.tenantId);
     }
 
@@ -392,17 +388,16 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     ScopeImpl scope = getScopeActivity();
     ensureParentInitialized();
 
-    List<VariableDeclaration> variableDeclarations = (List<VariableDeclaration>) scope
-        .getProperty(BpmnParse.PROPERTYNAME_VARIABLE_DECLARATIONS);
+    List<VariableDeclaration> variableDeclarations = (List<VariableDeclaration>)
+      scope.getProperty(BpmnParse.PROPERTYNAME_VARIABLE_DECLARATIONS);
     if (variableDeclarations != null) {
-      for (VariableDeclaration variableDeclaration : variableDeclarations) {
+      for (var variableDeclaration : variableDeclarations) {
         variableDeclaration.initialize(this, parent);
       }
     }
 
     if (isProcessInstanceExecution()) {
-      String initiatorVariableName = (String) processDefinition
-          .getProperty(BpmnParse.PROPERTYNAME_INITIATOR_VARIABLE_NAME);
+      String initiatorVariableName = (String) processDefinition.getProperty(BpmnParse.PROPERTYNAME_INITIATOR_VARIABLE_NAME);
       if (initiatorVariableName != null) {
         String authenticatedUserId = Context.getCommandContext().getAuthenticatedUserId();
         setVariable(initiatorVariableName, authenticatedUserId);
@@ -410,8 +405,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     }
 
     // create event subscriptions for the current scope
-    for (EventSubscriptionDeclaration declaration : EventSubscriptionDeclaration.getDeclarationsForScope(scope)
-        .values()) {
+    for (EventSubscriptionDeclaration declaration : EventSubscriptionDeclaration.getDeclarationsForScope(scope).values()) {
       if (!declaration.isStartEvent()) {
         declaration.createSubscriptionForExecution(this);
       }
@@ -423,8 +417,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     LOG.initializeTimerDeclaration(this);
     ScopeImpl scope = getScopeActivity();
     createTimerInstances(TimerDeclarationImpl.getDeclarationsForScope(scope).values());
-    for (Map<String, TimerDeclarationImpl> timerDeclarations : TimerDeclarationImpl
-        .getTimeoutListenerDeclarationsForScope(scope).values()) {
+    for (var timerDeclarations : TimerDeclarationImpl.getTimeoutListenerDeclarationsForScope(scope).values()) {
       createTimerInstances(timerDeclarations.values());
     }
   }
@@ -567,15 +560,13 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   @Override
   public void removeVariablesLocalInternal() {
     for (VariableInstanceEntity variableInstance : variableStore.getVariables()) {
-      invokeVariableLifecycleListenersDelete(variableInstance, this,
-          Collections.singletonList(getVariablePersistenceListener()));
+      invokeVariableLifecycleListenersDelete(variableInstance, this, List.of(getVariablePersistenceListener()));
       removeVariableInternal(variableInstance);
     }
   }
 
   @Override
-  public void interrupt(String reason, boolean skipCustomListeners, boolean skipIoMappings,
-      boolean externallyTerminated) {
+  public void interrupt(String reason, boolean skipCustomListeners, boolean skipIoMappings, boolean externallyTerminated) {
 
     // remove Jobs
     if (preserveScope) {
@@ -834,8 +825,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
 
   @Override
   public boolean isProcessInstanceStarting() {
-    // the process instance can only be starting if it is currently in
-    // main-memory already
+    // the process instance can only be starting if it is currently in main-memory already
     // we never have to access the database
     return processInstance != null && processInstance.isStarting;
   }
@@ -978,8 +968,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
 
   protected void ensureSubProcessInstanceInitialized() {
     if (shouldQueryForSubprocessInstance && subProcessInstance == null) {
-      subProcessInstance = Context.getCommandContext().getExecutionManager()
-          .findSubProcessInstanceBySuperExecutionId(id);
+      subProcessInstance = Context.getCommandContext().getExecutionManager().findSubProcessInstanceBySuperExecutionId(id);
     }
   }
 
@@ -1022,8 +1011,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
 
   protected void ensureSuperCaseExecutionInitialized() {
     if (superCaseExecution == null && superCaseExecutionId != null) {
-      superCaseExecution = Context.getCommandContext().getCaseExecutionManager()
-          .findCaseExecutionById(superCaseExecutionId);
+      superCaseExecution = Context.getCommandContext().getCaseExecutionManager().findCaseExecutionById(superCaseExecutionId);
     }
   }
 
@@ -1249,8 +1237,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
       CoreVariableInstance existingInstance = other.variableStore.getVariable(variable.getName());
       existingInstance.setValue(variable.getTypedValue(false));
       invokeVariableLifecycleListenersUpdate(existingInstance, this);
-      invokeVariableLifecycleListenersDelete(variable, this,
-          Collections.singletonList(getVariablePersistenceListener()));
+      invokeVariableLifecycleListenersDelete(variable, this, List.of(getVariablePersistenceListener()));
     } else {
       other.variableStore.addVariable(variable);
     }
@@ -1371,8 +1358,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     return executionsMap;
   }
 
-  private Map<String, List<VariableInstanceEntity>> determineVariablesByScope(
-      Collection<VariableInstanceEntity> variables) {
+  private Map<String, List<VariableInstanceEntity>> determineVariablesByScope(Collection<VariableInstanceEntity> variables) {
     Map<String, List<VariableInstanceEntity>> variablesByScope = new HashMap<>();
     if (variables != null) {
       for (VariableInstanceEntity variable : variables) {
@@ -1383,8 +1369,10 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   }
 
   private void restoreExecutionTree(Collection<ExecutionEntity> executions,
-      Collection<EventSubscriptionEntity> eventSubscriptions, Collection<VariableInstanceEntity> variables,
-      Map<String, ExecutionEntity> executionsMap, Map<String, List<VariableInstanceEntity>> variablesByScope) {
+                                    Collection<EventSubscriptionEntity> eventSubscriptions,
+                                    Collection<VariableInstanceEntity> variables,
+                                    Map<String, ExecutionEntity> executionsMap,
+                                    Map<String, List<VariableInstanceEntity>> variablesByScope) {
     for (ExecutionEntity execution : executions) {
       if (execution.executions == null) {
         execution.executions = new ArrayList<>();
@@ -1564,8 +1552,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
   protected void ensureEventSubscriptionsInitialized() {
     if (eventSubscriptions == null) {
 
-      eventSubscriptions = Context.getCommandContext().getEventSubscriptionManager()
-          .findEventSubscriptionsByExecution(id);
+      eventSubscriptions = Context.getCommandContext().getEventSubscriptionManager().findEventSubscriptionsByExecution(id);
     }
   }
 
@@ -1639,8 +1626,9 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
 
   public IncidentEntity getIncidentByCauseIncidentId(String causeIncidentId) {
     return getIncidents().stream()
-        .filter(incidentEntity -> Objects.equals(incidentEntity.getCauseIncidentId(), causeIncidentId)).findAny()
-        .orElse(null);
+      .filter(incidentEntity -> Objects.equals(incidentEntity.getCauseIncidentId(), causeIncidentId))
+      .findAny()
+      .orElse(null);
   }
 
   // referenced task entities
@@ -1769,14 +1757,8 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     final List<ExecutionEntity> execs = new ArrayList<>();
     new ExecutionTopDownWalker(this).addPreVisitor(obj -> {
       if (!obj.getEventSubscriptions().isEmpty() &&
-
-          (obj.isInState(ActivityInstanceState.DEFAULT) || (!obj.getActivity().isScope()))) { // state
-                                                                                              // is
-                                                                                              // default
-                                                                                              // or
-                                                                                              // tree
-                                                                                              // is
-                                                                                              // compacted
+          (obj.isInState(ActivityInstanceState.DEFAULT) || (!obj.getActivity().isScope()))) {
+        // state is default or tree is compacted
         execs.add(obj);
       }
     }).walkUntil();
@@ -1823,19 +1805,13 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
     // we can't be sure there are no entries in it since
     // the list hasn't been initialized/queried yet.
     cachedEntityState = BitMaskUtil.setBit(cachedEntityState, TASKS_STATE_BIT, tasks == null || !tasks.isEmpty());
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, EVENT_SUBSCRIPTIONS_STATE_BIT,
-        eventSubscriptions == null || !eventSubscriptions.isEmpty());
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, EVENT_SUBSCRIPTIONS_STATE_BIT, eventSubscriptions == null || !eventSubscriptions.isEmpty());
     cachedEntityState = BitMaskUtil.setBit(cachedEntityState, JOBS_STATE_BIT, jobs == null || !jobs.isEmpty());
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, INCIDENT_STATE_BIT,
-        incidents == null || !incidents.isEmpty());
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, VARIABLES_STATE_BIT,
-        !variableStore.isInitialized() || !variableStore.isEmpty());
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, SUB_PROCESS_INSTANCE_STATE_BIT,
-        shouldQueryForSubprocessInstance);
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, SUB_CASE_INSTANCE_STATE_BIT,
-        shouldQueryForSubCaseInstance);
-    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, EXTERNAL_TASKS_BIT,
-        externalTasks == null || !externalTasks.isEmpty());
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, INCIDENT_STATE_BIT, incidents == null || !incidents.isEmpty());
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, VARIABLES_STATE_BIT, !variableStore.isInitialized() || !variableStore.isEmpty());
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, SUB_PROCESS_INSTANCE_STATE_BIT, shouldQueryForSubprocessInstance);
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, SUB_CASE_INSTANCE_STATE_BIT, shouldQueryForSubCaseInstance);
+    cachedEntityState = BitMaskUtil.setBit(cachedEntityState, EXTERNAL_TASKS_BIT, externalTasks == null || !externalTasks.isEmpty());
 
     return cachedEntityState;
   }
@@ -1976,7 +1952,7 @@ public class ExecutionEntity extends PvmExecutionImpl implements Execution, Proc
       } catch (ClassCastException e) {
         ModelElementType elementType = modelElementInstance.getElementType();
         throw LOG.castModelInstanceException(modelElementInstance, "FlowElement", elementType.getTypeName(),
-            elementType.getTypeNamespace(), e);
+          elementType.getTypeNamespace(), e);
       }
 
     } else {
